# QC-App-Oriented-Benchmarks

./: generate-benchmark-ore.ipynb  generate-quantum-volume-ore.ipynb  preprocessor2.py
_common/: metrics.py
_doc/: AQ.md
conversion_lib/: circuit.py  gate.py  qiskit_circuit_to_ore.py  qubit.py  qubit_pool.py  setup.py  test.py
hamiltonian-simulation/_common/: precalculated_data.ipynb  precalculated_data.json
javascript_baseline/circuit/: CHANGELOG.md  index.js  package.json  test.js
monte-carlo/qiskit/: mc_circuits.py
phase-estimation/qiskit/: pe_benchmark.py
qiskit2ore/: README.md  pyproject.toml
qiskit2ore/src/qiskit2ore/: dump.py
qiskit2ore/src/qiskit2qore/: circuit.py  gate.py  qiskit_circuit_to_ore.py  qubit_pool.py  utils.py
qiskit2ore/tests/: test_qiskit2qore.py
vqe/qiskit/: vqe_benchmark.py  vqe_circuits.py
